k8s/envoy_health_check_config.yaml
   
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9000

node:
  cluster: mycluster
  id: test-id

static_resources:
  listeners:
  - name: listener_0

    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }

    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:  
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager  
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: 
                  cluster: service_backend
                  hash_policy: 
                  - header:
                      header_name: X-Custom-Header
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          - name: envoy.filters.http.health_check
            type_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
              pass_through_mode: true

  clusters:
  - name: service_backend
    type: STRICT_DNS  
    lb_policy: RING_HASH
    ignore_new_hosts_until_first_hc: true
    health_checks: 
      - timeout: 1s
        interval: 1s
        unhealthy_threshold: 1
        healthy_threshold: 1
        http_health_check: 
          path: /healthz
    ring_hash_lb_config:
      minimum_ring_size: 1024
      maximum_ring_size: 8192
    load_assignment:
      cluster_name: upstream_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: upstream
                port_value: 8000
