k8s/envoy_health_check_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-health-check
  namespace: envoy-dns
  labels:
    app: envoy-health-check
    service: envoy-health-check
spec:
  ports:
    - port: 10000
      name: http
  selector:
    app: envoy-health-check
