k8s/envoy_ring_hash_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-ring-hash
  namespace: envoy-dns
  labels:
    app: envoy-ring-hash
    service: envoy-ring-hash
spec:
  ports:
    - port: 10000
      name: http
  selector:
    app: envoy-ring-hash
