k8s/envoy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: envoy-dns
  labels:
    app: envoy
    service: envoy
spec:
  ports:
    - port: 10000
      name: http
  selector:
    app: envoy
