k8s/upstream_deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: upstream
  name: upstream
  namespace: envoy-dns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: upstream
  template:
    metadata:
      labels:
        app: upstream
      name: upstream
    spec:
      containers:
        - name: upstream
          image: iad.ocir.io/idpt3tqjlv6l/envoy-discovery:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
          ports:
            - containerPort: 8000
              protocol: TCP
