k8s/upstream_headless_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upstream
  namespace: envoy-dns
  labels:
    app: upstream
    service: upstream
spec:
  clusterIP: None
  ports:
    - port: 8000
      name: http
  selector:
    app: upstream
